Refactor: extract commands, fix bugs, improve bot safety
Foundation fixes:
- Replace deprecated Class.newInstance() with getDeclaredConstructor().newInstance()
- Add emergency PlayerAction.STOP on bot crash in Bot.run() finally block
- Always register dev info commands (remove DevInfoCommands config gate)
- Improve getid UX: print copied ID to console

Bot discovery & control:
- Add info bots command to list all bots with status
- Add info <abbreviation> to describe a bot without activating it
- bot off now reports which bots were stopped
- printBotDescription shows ON/OFF/paused status
- Add getActiveInstance() for read-only bot queries
- Fix race condition: printBotDescription uses single getActiveInstance() call

Climb-state safety:
- recoverIfNeeded() wraps return-to-work in try/catch to guarantee climb off
- Add forceClimbingOff() for unconditional emergency cleanup
- DiggerBot finally calls both stopClimbing() and forceClimbingOff()
- waitForRecovery() caps at 60 seconds to prevent infinite loops
- moveForward() rethrows exceptions instead of silent swallow
- Add unit tests for forceClimbingOff contract

Extract console commands from WurmHelper god class:
- New CardinalDirection enum (was private in WurmHelper)
- New QuickAction enum (was private Action enum in WurmHelper)
- New command package: ConsoleCommandHandler, CommandRegistry
- MovementCommandHandler: move, look, stabilize, mtcenter, mtcorner, stabilizelook
- UtilityCommandHandler: sleep, combine, getid, mts, action, actionlist
- VisualCommandHandler: hidemount, hidestructures, showcoords
- DevInfoCommandHandler: iteminfo, tileinfo, playerinfo, creatureinfo
- WurmHelper shrunk from 600+ to ~400 lines
- handleInput() checks registry first, then legacy enum map
- handleInfoCommand() delegates to registry for usage/description

Bug fixes:
- Fix format string bug in DevInfoCommandHandler (orphaned %s)
- Fix race condition in BotController.handleInput() (isInstantiated+getInstance pair)
- Fix NPE: DiggerBot